<resources>
    <string name="app_name">AccountStore</string>
    <string name="SharedPref">myAppPreference</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome to AccountStore!</string>
    <string name="Anon">It seems that this is the first time you open AccountStore.You need a password to keep your data safe!</string>
    <string name="hint">More than 4 characters!</string>
    <string name="button_save">SAVE</string>
    <string name="successfully">Password saved successfully!</string>
    <string name="tooLong">Password is too long!</string>
    <string name="bad">Password is too short!</string>
    <string name="SignIn">SIGN IN</string>
    <string name="forgot">Forgot Your Password?</string>
    <string name="submit">SUBMIT</string>
    <string name="introduce">Introduce the password!</string>
    <string name="onetouchsignin">One-touch Sign In</string>
    <string name="placeYourFinger">Please place your fingertip on the scanner to verify your identity!</string>
    <string name="descriptionFingerPrint">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings!)</string>
    <string name="fingerPrintAuthSucceded">Fingerprint Authentication succeeded.</string>
    <string name="fingerPrintAuthError">Fingerprint Authentication error</string>
    <string name="fingerPrintAuthFailed">Fingerprint Authentication failed.</string>
    <string name="fingerPrintAuthHelp">Fingerprint Authentication help</string>
    <string name="incorrect">Incorrect</string>
    <string name="fingerPrintContentDescription">fingerprint image</string>
    <string name="eyeImageChange">show password</string>
    <string name="fingerprinticon">fingerprint icon</string>
    <string name="keyimage">key image</string>
    <string name="logocontentDesc">logo image</string>
    <string name="gobackarrow">go back arrow</string>
    <string name="firstTimeLogoContentDesc">logo image</string>
    <string name="mynotes">MY NOTES</string>
    <string name="diary">DIARY</string>
    <string name="settings">SETTINGS</string>
    <string name="information">INFORMATION</string>
    <string name="info">info</string>
    <string name="securityLogo">security logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addNewItem">Add item</string>
    <string name="MainActivityLogo">logo</string>
    <string name="GobackAuthPrint">GoBack</string>
    <string name="frag1fav">favorites</string>
    <string name="frag1del">delete</string>
    <string name="frag1edit">edit</string>
    <string name="content">content demo</string>
    <string name="favoriteitem">favorite</string>
    <string name="main_passManager">AccountStore.Your Password Manager</string>
    <string name="app_logo">app logo</string>
    <string name="NoDeviceSensor">Your Device does not have a Fingerprint Sensor</string>
    <string name="FingerPrintnotEnabled">Fingerprint authentication permission not enabled</string>
    <string name="ProvidePrintSettings">Register at least one fingerprint in Settings</string>
    <string name="lockSecurityNotEnabled">Lock screen security not enabled in Settings</string>
    <string name="LoginLogo">Logo</string>
    <string name="login">LOGIN</string>
    <string name="exit_app">Exit app</string>
    <string name="all">All</string>
    <string name="settingss">Settings</string>
    <string name="add_item">Add item</string>
    <string name="no_items_yet">No items yet.</string>
    <string name="go_back_button">go back button</string>
    <string name="save">SAVE</string>
    <string name="title">Title</string>
    <string name="select_icon">select icon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="website">Website</string>
    <string name="additional_info">Additional info</string>



    <string name="account_for">Account description</string>



    <string name="select_icon2">Select Icon</string>
    <string name="exit_icon_select">exit icon select</string>
    <string name="icon_in_list_row">Icon in list row</string>
    <string name="exit_edit_page">exit edit page</string>
    <string name="aditional_info">Aditional info</string>
    <string name="edit_account">edit account</string>
    <string name="delete_account">delete account</string>
    <string name="account_icon">account icon</string>
    <string name="spotify">Spotify</string>
    <string name="copy">COPY</string>
    <string name="haskell_pisoi_yahoo_com">haskell_pisoi@yahoo.com</string>
    <string name="show_password_or_not">show password or not</string>
    <string name="open">OPEN</string>
    <string name="however_if_your_device_does_not_have_a_fingerprint_sensor_or_perhaps_for_some_reason_fingerprint_authentication_does_not_work_at_all_the_only_option_you_have_is_to_reset_the_app">However, if your device does not have a fingerprint sensor or perhaps for some reason fingerprint authentication does not work at all the only option you have is to reset the app!</string>
    <string name="my_dear_user_if_you_have_problems_logging_in_you_may_try_to_use_fingerprint_authentication_by_pressing_the_fingerprint_icon_on_your_login_page">My dear user, if you have problems logging in, you may try to use fingerprint authentication by pressing \'the fingerprint icon\' on your login page.</string>
    <string name="warning">Reset the app? All data will be deleted!</string>
    <string name="reset">reset</string>
    <string name="logo_in_reset_screen">app logo</string>
    <string name="arrow_to_go_back_to_previous_screen">arrow to go back to previous screen</string>
    <string name="settings_textview">Settings</string>
    <string name="arrow_go_back">arrow_go_back</string>
    <string name="skip_login_page_not_recommended">Skip login page(not recommended)</string>
    <string name="change_master_password">Change master password</string>
    <string name="change">CHANGE</string>
    <string name="delete_all_database_records">Delete all database records</string>
    <string name="delete">DELETE</string>
    <string name="reset_app_all_data_will_be_lost">Reset app(all data will be lost!)</string>
    <string name="reset_from_settings">RESET</string>
    <string name="warning2">All database records will be lost except Master Password, proceed?</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="warning3">Change Master Password:</string>
    <string name="new_password_change">new password</string>
    <string name="old_password_change">old password</string>
    <string name="make_sure_that_you_remember_the_password_because_if_you_forget_it_you_wont_be_able_to_log_in_unless_you_have_a_fingerprint_sensor">Make sure that you remember the password because if you forget it, you will not be able to log in unless you have a fingerprint sensor!</string>
    <string name="privacy_policy_icon">privacy policy icon</string>
    <string name="privacy_policy_amp_terms_of_use"><![CDATA[Privacy Policy & Terms of Use]]></string>
</resources>