<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ForgotPassword">

    <ImageView
        android:background="@drawable/ripple_black"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:id="@+id/forgotPassGoBack"
        app:srcCompat="@drawable/navigate_before_dark"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/arrow_to_go_back_to_previous_screen" />

    <LinearLayout
        android:layout_marginTop="-25dp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView

        android:src="@drawable/lego2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_in_reset_screen" />

    </LinearLayout>

    <TextView
        app:fontFamily="@font/average_sans"
        android:textColor="#00cc99"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/my_dear_user_if_you_have_problems_logging_in_you_may_try_to_use_fingerprint_authentication_by_pressing_the_fingerprint_icon_on_your_login_page"
        android:textSize="21sp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView
        app:fontFamily="@font/average_sans"
        android:textStyle="bold"
        android:textColor="@color/red1"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:textSize="21sp"
        android:text="@string/however_if_your_device_does_not_have_a_fingerprint_sensor_or_perhaps_for_some_reason_fingerprint_authentication_does_not_work_at_all_the_only_option_you_have_is_to_reset_the_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/forgotPassReset"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/reset"
        android:background="@drawable/forgot_pass_button_round"
        android:textColor="@color/white"
        android:layout_width="60dp"
        android:layout_height="40dp"/>

</LinearLayout>