<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/onetimeBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneTime">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/iconlog"
            android:contentDescription="@string/firstTimeLogoContentDesc"
            android:src="@drawable/lego2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="22sp"
            app:fontFamily="sans-serif-medium" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp">

        <TextView

            android:textColor="#0ac229"
            android:text="@string/Anon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:fontFamily="sans-serif-light"
            android:layout_marginBottom="40dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"

            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:layout_marginLeft="10dp">

            <ImageView
                android:contentDescription="@string/keyimage"
                app:srcCompat="@drawable/ic_vpn_key_black_24dp"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginEnd="3dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="3dp" />

            <EditText

                android:maxWidth="210dp"
                android:id="@+id/ediTextPass"
                android:textColorHint="@color/hint"
                android:background="@drawable/edittext"
                android:hint="@string/hint"
                android:layout_width="wrap_content"
                android:autofillHints="password"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textAlignment="center"

                android:gravity="center_horizontal" />

            <ImageView
                android:background="@drawable/ripple"
                android:contentDescription="@string/eyeImageChange"
                android:id="@+id/FirstEye"
                app:srcCompat="@drawable/ic_visibility_black_24dp"
                android:layout_marginStart="15dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp" />

        </LinearLayout>
        <TextView
            android:id="@+id/redText"
            android:layout_marginTop="10dp"
            android:textColor="@color/red"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <Button


            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_back"
            android:gravity="center_horizontal"
            android:paddingLeft="25dp"
            android:paddingTop="12dp"
            android:paddingRight="25dp"
            android:paddingBottom="0dp"
            android:text="@string/button_save"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>