<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_fingerprint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".FingerprintActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/fingerprintBackarrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/ripple_round"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/GobackAuthPrint"
            app:srcCompat="@drawable/navigate_before_dark" />

    <LinearLayout
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:id="@+id/headerLayout"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">


        <ImageView
            android:contentDescription="@string/fingerPrintContentDescription"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/ic_fingerprint_black_24dp"
            android:id="@+id/icon"
            android:paddingTop="2dp"
            android:layout_marginBottom="20dp"/>


        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f5f5f5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/onetouchsignin"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/desc"
            android:text="@string/placeYourFinger"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="10dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/errorText"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/descriptionFingerPrint"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="#000000"
        android:textSize="17sp"
        android:gravity="center_horizontal" />
    </LinearLayout>

</ScrollView>